images/bootstrap/overlay/etc/microshift/manifests.d/network-install/manifests/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tftp
  labels:
    app.kubernetes.io/name: tftp
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: tftp
    app.kubernetes.io/part-of: bootstrap
spec:
  replicas: 1
  serviceName: "tftp"
  selector:
    matchLabels:
      app.kubernetes.io/name: tftp
      app.kubernetes.io/component: tftp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tftp
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: tftp
        app.kubernetes.io/part-of: bootstrap
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: tftp-sa
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      hostAliases:
      - ip: "192.168.100.1"
        hostnames:
        - "resources-network-install.apps.bootstrap.BASE_DNS_ZONE"
      containers:
        - name: tftp
          image: localhost/tftp:latest 
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - containerPort: 69
              name: tftp-port
          volumeMounts:
            - name: tftpboot
              mountPath: /tftpboot
      volumes:
        - name: tftpboot
          persistentVolumeClaim:
            claimName: tftpboot
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: generate-install-media
  labels:
    app.kubernetes.io/name: generate-install-media
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: generate-install-media
    app.kubernetes.io/part-of: bootstrap
spec:
  replicas: 1
  serviceName: "install-resources"
  selector:
    matchLabels:
      app.kubernetes.io/name: generate-install-media
      app.kubernetes.io/component: generate-install-media
  template:
    metadata:
      labels:
        app.kubernetes.io/name: generate-install-media
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: generate-install-media
        app.kubernetes.io/part-of: bootstrap
    spec:
      hostAliases:
      - ip: "192.168.100.1"
        hostnames:
        - "registry-registry.apps.bootstrap.BASE_DNS_ZONE"
      terminationGracePeriodSeconds: 10
      serviceAccountName: ansible-runner
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: playbook
          configMap:
            name: create-ocp-pxe-boot-files
        - name: agent-config
          configMap:
            name: agent-config
            items:
              - key: agent-config.yaml
                path: agent-config.yaml
        - name: install-config
          configMap:
            name: install-config
            items:
              - key: install-config.yaml
                path: install-config.yaml
        - name: additional-manifests
          configMap:
            name: additional-manifests
        - name: install-resources
          persistentVolumeClaim:
            claimName: install-resources
        - name: install-scratch
          emptyDir: {}
        - name: ansible-scratch
          emptyDir: {}
        - name: installer-cache
          emptyDir: {}
      containers:
        - name: host-install-resources
          image: registry.redhat.io/ubi9/httpd-24:9.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: install-resources
              mountPath: /var/www/html
