images/bootstrap/overlay/etc/microshift/manifests.d/network-install/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tftp
  labels:
    app.kubernetes.io/name: tftp
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: tftp
    app.kubernetes.io/part-of: bootstrap
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: tftp
    app.kubernetes.io/component: tftp
  ports:
    - name: tftp
      port: 69
      protocol: UDP
      targetPort: 69
---
apiVersion: v1
kind: Service
metadata:
  name: pubsrv
  labels:
    app.kubernetes.io/name: pubsrv
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: pubsrv
    app.kubernetes.io/part-of: bootstrap
spec:
  selector:
    app.kubernetes.io/name: pubsrv
    app.kubernetes.io/component: pubsrv
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: install-resources
  labels:
    app.kubernetes.io/name: install-resources
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: generate-install-media
    app.kubernetes.io/part-of: bootstrap
spec:
  selector:
    app.kubernetes.io/name: generate-install-media
    app.kubernetes.io/component: generate-install-media
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
