images/bootstrap/overlay/etc/microshift/manifests.d/network-install/manifests/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pubsrv
spec:
  to:
    kind: Service
    name: pubsrv
  port:
    targetPort: http
